# ESPN-fantasy-helper

./: .gitignore  LICENSE  README.md  league_info.py  pyproject.toml
algorithm/: .gitignore  chat.py  league_info.py  main.py  scraper.py
algorithm/player_data/: current_stats.db
api/: app.py
webapp/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
webapp/src/: main.ts  storage.ts  style.css  types.ts  ui.ts
webapp/src/services/: api.ts
